--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
     </div>
     <h1 id="name">Erik Rodriguez</h1>
     <h4 id="title">Aspiring Software Engineer</h4>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Nobis tempora molestiae incidunt facere ad, 
+        alias debitis placeat nam facilis quasi nulla iure dolorem neque sed,
+         at earum asperiores velit voluptas.</p>
+    <h3 id="skill-list">Skill</h3>
+    <ul>
+        <div id="icons">
+
+        </div>
+        <div id="icons">
+
+        </div>
+        <div id="icons">
+
+        </div>
+        <div id="icons">
+            
+        </div>
+
+    </ul>
+
+
 </body>
 </html>
