Add styling to skills

--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
     <h3 id="skill-list">Skill</h3>
     <ul>
         <div id="icons">
+            <img id="html"src="./assets/html-2.jpg" alt="Html">
 
         </div>
         <div id="icons">
+            <img src="./assets/css.png" alt="css" id="css">
 
         </div>
         <div id="icons">
+            <img src="./assets/javascript.png" alt="javascript" id="javascript">
 
         </div>
-        <div id="icons">
-            
-        </div>
-
     </ul>
 
 
