add the base html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,43 @@
 
         </div>
     </ul>
+    <h3 id="resume">Resume</h3>
+    <ul>
+        <li>
+
+            <div id="id">
+            </div>
+            
+        </li>
+    </ul>
+<h3 id="projects">My Projects</h3>
+<ul>
+    <li>
+        <div>
+
+        </div>
+    </li>
+</ul>
+
+<footer id="contact" class="links">
+    <ul>
+        <li>
+            <div>
+
+            </div>
+        </li>
+        <li>
+            <div>
+
+            </div>
+        </li>
+        <li>
+            <div>
+
+            </div>
+        </li>
+    </ul>
+</footer>
 
 
 </body>
