add nav and nav basic styling

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div id="selection">
+    <nav id="selection">
 
-        <ul id="tabs">
-            <li id ="info"class="options">Info</li>
-            <li id ="skill"class="options">Contact</li>
-            <li id ="project"class="options">Projects</li>
-            <li id ="contact"class="options">Contact</li>
-        </ul>
-    </div>
+        <div id="tabs">
+            <div id ="info"class="options">Info</div>
+            <div id ="skill"class="options">Contact</div>
+            <div id ="project"class="options">Projects</div>
+            <div id ="contact"class="options">Contact</div>
+        </div>
+    </nav>
     <h1 id="name">Erik Rodriguez</h1>
     <h4 id="title">Aspiring Software Engineer</h4>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
