add contact icons

--- a/index.html
+++ b/index.html
@@ -62,16 +62,18 @@
     <ul>
         <li>
             <div>
+                <img src="./assets/github.png" alt="github" id="github">
+            </div>
+        </li>
+        <li>
+            <div>
+                <img src="./assets/linkedin.png" alt="linkedin" id="linked-in">
 
             </div>
         </li>
         <li>
             <div>
-
-            </div>
-        </li>
-        <li>
-            <div>
+                <img src="./assets/email.png" alt="email" id="email" >
 
             </div>
         </li>
