--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div id ="contact"class="options">Contact</div>
         </div>
     </nav>
+    <button type="switch" id="light-dark">Light/Dark mode</button>
     <section>
         
         <h1 id="name">Erik Rodriguez</h1>
@@ -59,17 +60,15 @@
     
 </section>
 <footer id="contact" class="links">
-            <div>
-                <img src="./assets/github.png" alt="github" id="github">
-            </div>
-            <div>
-                <img src="./assets/linkedin.png" alt="linkedin" id="linked-in">
-
-            </div>
-            <div>
-                <img src="./assets/email.png" alt="email" id="email" >
-
-            </div>
+     <div>
+         <img src="./assets/github.png" alt="github" id="github">
+        </div>
+        <div>
+            <img src="./assets/linkedin.png" alt="linkedin" id="linked-in">
+        </div>
+        <div>
+            <img src="./assets/email.png" alt="email" id="email" >
+        </div>
 </footer>
 
 
