add catched elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div id="tabs">
             <div id ="info"class="options">Info</div>
-            <div id ="skill"class="options">Contact</div>
+            <div id ="skill"class="options">Skill</div>
             <div id ="project"class="options">Projects</div>
             <div id ="contact"class="options">Contact</div>
         </div>
@@ -59,7 +59,7 @@
 
     
 </section>
-<footer id="contact" class="links">
+<footer id="contacts" class="links">
      <div>
          <img src="./assets/github.png" alt="github" id="github">
         </div>
