link icons to contact info

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
         
         <h1 id="name">Erik Rodriguez</h1>
         <h4 id="title">Aspiring Software Engineer</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Nobis tempora molestiae incidunt facere ad, 
-        alias debitis placeat nam facilis quasi nulla iure dolorem neque sed,
-        at earum asperiores velit voluptas.</p>
+    <p></p>
     <h3 id="skill-list">Skill</h3>
     <ul>
         <div id="icons">
@@ -61,13 +58,19 @@
 </section>
 <footer id="contacts" class="links">
      <div>
-         <img src="./assets/github.png" alt="github" id="github">
+         <a href="https://github.com/Erodri6z">
+             <img src="./assets/github.png" alt="github" id="github">
+         </a>
         </div>
         <div>
-            <img src="./assets/linkedin.png" alt="linkedin" id="linked-in">
+            <a href="https://www.linkedin.com/feed/">
+                <img src="./assets/linkedin.png" alt="linkedin" id="linked-in">
+            </a>
         </div>
         <div>
-            <img src="./assets/email.png" alt="email" id="email" >
+            <a href="mailto:erikrodriguez2417@gmail.com">
+                <img src="./assets/email.png" alt="email" id="email" >
+            </a>
         </div>
 </footer>
 
