--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         
     </aside>
     <h3 class="projects">My Projects</h3>
+    <div id="my-stuff">
+        <a href="https://ttt-erodri6z.netlify.app/">
+            <img id="ttt" src="./assets/tictactoe.png" alt="tictactoe">
+        </a>
+        <div>
+            <p>More Coming soon</p>
+        </div>
+    </div>
 
     
 </section>
