add tic tac toe

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <script defer src="./js/app.js"></script>
+    
+    <script defer src="./js/app.js" type="module"></script>
     <title>Portfolio</title>
 </head>
 <body>
@@ -55,10 +56,6 @@
    
     <h3 class="projects">My Projects</h3>
     <div id="my-stuff">
-            <img id="ttt" src="./assets/tictactoe.png" alt="tictactoe">
-        <div>
-            <p>More Coming soon</p>
-        </div>
     </div>
 
     
