--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    
     <script defer src="./js/app.js" type="module"></script>
+    <link rel="icon" href="./favicon/ER.png" type="image.png" sizes="16x16">
     <title>Portfolio</title>
 </head>
 <body>
