add new badges for skills

--- a/index.html
+++ b/index.html
@@ -45,15 +45,27 @@
     </aside>
     <h3 id="skill-list">Skill</h3>
     <div class="icons">
-            <div id="icon-a">
-            <img id="html"src="./assets/html-2.jpg" alt="Html">
+        <div id="icon-a">
+            <img src="https://img.shields.io/badge/-HTML5-333333?style=flat&logo=HTML5" alt="html" id="html">
         </div>
         <div id="icon-b">
-            <img src="./assets/css.png" alt="css" id="css">
+            <img src="https://img.shields.io/badge/-CSS-333333?style=flat&logo=CSS3&logoColor=1572B6" alt="css" id="css">
         </div>
         <div id="icon-c">
-            <img src="./assets/javascript.png" alt="javascript" id="javascript">
-           </div> 
+            <img src="https://img.shields.io/badge/-JavaScript-333333?style=flat&logo=Javascript&logoColor=)" alt="javascript" id="javascript">
+        </div>
+        <div id="icon-c">
+            <img src="https://img.shields.io/badge/-Express-333333?style=flat&logo=express" alt="javascript" id="javascript">
+        </div>
+        <div id="icon-c">
+            <img src="https://img.shields.io/badge/-React-333333?logo=react" alt="javascript" id="javascript">
+        </div>
+        <div id="icon-c">
+            <img src="https://img.shields.io/badge/-Python3-333333?style=flat&logo=python" alt="javascript" id="javascript">
+        </div>
+        <div id="icon-c">
+            <img src="https://img.shields.io/badge/-Django-333333?logo=django" alt="javascript" id="javascript">
+        </div> 
     </div>
         
    
