add more skills

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
             <img src="https://img.shields.io/badge/-Express-333333?style=flat&logo=express" alt="javascript" id="javascript">
         </div>
         <div id="icon-c">
+            <img src="https://img.shields.io/badge/-mongoDB-333333?logo=mongodb" alt="javascript" id="javascript">
+        </div>
+        <div id="icon-c">
+            <img src="https://img.shields.io/badge/-Mongoose-333333?logo=Mongoose" alt="javascript" id="javascript">
+        </div> 
+        <div id="icon-c">
+            <img src="https://img.shields.io/badge/-Node.js-333333?logo=node.js" alt="javascript" id="javascript">
+        </div>
+        <div id="icon-c">
+            <img src="https://img.shields.io/badge/-PostgreSQL-333333?logo=PostgreSQL" alt="javascript" id="javascript">
+        </div>
+        <div id="icon-c">
             <img src="https://img.shields.io/badge/-React-333333?logo=react" alt="javascript" id="javascript">
         </div>
         <div id="icon-c">
@@ -65,7 +77,11 @@
         </div>
         <div id="icon-c">
             <img src="https://img.shields.io/badge/-Django-333333?logo=django" alt="javascript" id="javascript">
-        </div> 
+        </div>
+        <div id="icon-c">
+            <img src="https://img.shields.io/badge/-docker-333333?logo=docker" alt="javascript" id="javascript">
+        </div>
+  
     </div>
         
    
