add a better resume

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <aside>    
         <h3 class="resume">Resume</h3>
             <div id="id">
-                <a href="https://my.indeed.com/p/erikr-rlu3do8">
+                <a href="https://docs.google.com/document/d/1GNk5k53wbv4a2SR02lePJ9MVVd2QykYr8UFt54IqI0M/edit?usp=sharing">
                     <img src="./assets/resume.jpg" alt="resume" id="resume">
                 </a>
             </div>
@@ -75,6 +75,9 @@
         </div>
         <div id="icon-l">
             <img src="https://img.shields.io/badge/-docker-333333?logo=docker" alt="docker" id="docker">
+        </div>
+        <div id="icon-">
+            <img src="" alt="" id="">
         </div>
     </div>
         <h3 class="projects">My Projects</h3>
