add more skill badges

--- a/index.html
+++ b/index.html
@@ -74,10 +74,19 @@
             <img src="https://img.shields.io/badge/-Django-333333?logo=django" alt="django" id="django">
         </div>
         <div id="icon-l">
-            <img src="https://img.shields.io/badge/-docker-333333?logo=docker" alt="docker" id="docker">
+            <img src="https://img.shields.io/badge/-Docker-333333?logo=docker" alt="docker" id="docker">
         </div>
-        <div id="icon-">
-            <img src="" alt="" id="">
+        <div id="icon-m">
+            <img src="https://img.shields.io/badge/-Netlify-333333?logo=netlify" alt="netlify" id="netlify">
+        </div>
+        <div id="icon-n">
+            <img src="https://img.shields.io/badge/-Heroku-333333?logo=heroku" alt="heroku" id="heroku">
+        </div>
+        <div id="icon-o">
+            <img src="https://img.shields.io/badge/-Bootstap-333333?logo=bootstrap" alt="heroku" id="heroku">
+        </div>
+        <div id="icon-p">
+            <img src="https://img.shields.io/badge/-Git-333333?logo=git" alt="heroku" id="heroku">
         </div>
     </div>
         <h3 class="projects">My Projects</h3>
