--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <img src="https://img.shields.io/badge/-Heroku-333333?logo=heroku" alt="heroku" id="heroku">
         </div>
         <div id="icon-o">
-            <img src="https://img.shields.io/badge/-Bootstap-333333?logo=bootstrap" alt="heroku" id="heroku">
+            <img src="https://img.shields.io/badge/-Bootstap-333333?logo=bootstrap" alt="bootstrap" id="bootstrap">
         </div>
         <div id="icon-p">
-            <img src="https://img.shields.io/badge/-Git-333333?logo=git" alt="heroku" id="heroku">
+            <img src="https://img.shields.io/badge/-Git-333333?logo=git" alt="git" id="git">
         </div>
     </div>
         <h3 class="projects">My Projects</h3>
